--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT = 5000
 NODE_ENV = "development"
-MONGO_URI = 
+MONGO_URI = mongodb+srv://orders:qwerty12@cluster0.s804t9j.mongodb.net/?retryWrites=true&w=majority
